[package]
name = "diem-mempool"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem mempool"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
futures = "0.3.12"
itertools = "0.10.0"
once_cell = "1.7.2"
proptest = { version = "1.0.0", optional = true }
rayon = "1.4.1"
serde = { version = "1.0.124", default-features = false }
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"

bounded-executor = { path = "../crates/bounded-executor" }
channel = { path = "../crates/channel" }
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-config = { path = "../config" }
diem-crypto = { path = "../crates/diem-crypto" }
diem-logger = { path = "../crates/diem-logger" }
diem-metrics = { path = "../crates/diem-metrics" }
diem-infallible = { path = "../crates/diem-infallible" }
diem-proptest-helpers = { path = "../crates/diem-proptest-helpers", optional = true }
diem-types = { path = "../types" }
diem-workspace-hack = { path = "../crates/diem-workspace-hack" }
mirai-annotations = "1.10.1"
mempool-notifications = { path = "../state-sync/inter-component/mempool-notifications" }
network = { path = "../network" }
rand = "0.8.3"
netcore = { path = "../network/netcore" }
serde_json = "1.0.64"
short-hex-str = { path = "../crates/short-hex-str" }
storage-interface = { path = "../storage/storage-interface" }
subscription-service = { path = "../crates/subscription-service" }
vm-validator = { path = "../vm-validator" }

storage-service = { path = "../storage/storage-service", optional = true }

[dev-dependencies]
enum_dispatch = "0.3.5"
proptest = "1.0.0"

diem-config = { path = "../config", features = ["fuzzing"] }
network = { path = "../network", features = ["fuzzing"] }
storage-interface = { path = "../storage/storage-interface", features = ["fuzzing"] }

[features]
default = []
failpoints = ["fail/failpoints", "vm-validator/failpoints"]
fuzzing = ["proptest", "diem-types/fuzzing", "storage-interface/fuzzing", "diem-config/fuzzing"]
