[package]
name = "generate-key"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem generate key"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
rand = "0.8.3"

bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-crypto = { path = "../../crates/diem-crypto/"}
diem-temppath = { path = "../../crates/diem-temppath" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
