[package]
name = "diem-documentation-tool"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem transaction-builder"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"
[dependencies]
serde_yaml = "0.8.17"
serde-reflection = { git = "https://github.com/diem/serde-reflection-diem.git", rev = "bb38a0fdb7b9c219cbbb646097e847587d059086" }
serde-generate = { git = "https://github.com/diem/serde-reflection-diem.git", rev = "bb38a0fdb7b9c219cbbb646097e847587d059086" }
anyhow = "1.0.38"
regex = "1.5.5"
structopt = "0.3.21"
once_cell = "1.7.2"

diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }

[dev-dependencies]
serde = { version = "1.0.124", features = ["derive"] }
tempfile = "3.2.0"

[features]
default = []

[[bin]]
name = "diemdoc"
path = "src/main.rs"
test = false
