[package]
name = "diem-workspace-hack"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem workspace hack"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"
### `cargo x generate-workspace-hack` to generate

### BEGIN HAKARI SECTION
[target.x86_64-unknown-linux-gnu.dependencies]
Inflector = { version = "0.11.4", features = ["default", "heavyweight", "lazy_static", "regex"] }
ahash = { version = "0.7.6", features = ["default", "std"] }
anyhow = { version = "1.0.69", features = ["backtrace", "default", "std"] }
backtrace = { version = "0.3.58", features = ["addr2line", "default", "gimli-symbolize", "miniz_oxide", "object", "serde", "std"] }
block-buffer = { version = "0.9.0", default-features = false, features = ["block-padding"] }
byteorder = { version = "1.4.3", features = ["default", "i128", "std"] }
bytes = { version = "1.4.0", features = ["default", "serde", "std"] }
chrono = { version = "0.4.23", features = ["clock", "default", "iana-time-zone", "js-sys", "oldtime", "serde", "std", "time", "wasm-bindgen", "wasmbind", "winapi"] }
clap = { version = "2.34.0", features = ["ansi_term", "atty", "color", "default", "strsim", "suggestions", "vec_map"] }
codespan-reporting = { version = "0.11.1", default-features = false, features = ["serde", "serialization"] }
console = { version = "0.15.5", features = ["ansi-parsing", "default", "unicode-width"] }
crossbeam-channel = { version = "0.5.7", features = ["crossbeam-utils", "default", "std"] }
crossbeam-deque = { version = "0.8.3", features = ["crossbeam-epoch", "crossbeam-utils", "default", "std"] }
crossbeam-queue = { version = "0.3.8", features = ["alloc", "default", "std"] }
crossbeam-utils = { version = "0.8.8", features = ["default", "lazy_static", "std"] }
either = { version = "1.8.1", features = ["default", "use_std"] }
futures-channel = { version = "0.3.26", features = ["alloc", "default", "futures-sink", "sink", "std"] }
futures-core = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-io = { version = "0.3.26", features = ["default", "std"] }
futures-sink = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-util = { version = "0.3.17", features = ["alloc", "async-await", "async-await-macro", "channel", "default", "futures-channel", "futures-io", "futures-macro", "futures-sink", "io", "memchr", "proc-macro-hack", "proc-macro-nested", "sink", "slab", "std"] }
generic-array = { version = "0.14.6", default-features = false, features = ["more_lengths"] }
hashbrown = { version = "0.12.3", features = ["ahash", "default", "inline-more", "raw"] }
hyper = { version = "0.14.24", features = ["client", "default", "full", "h2", "http1", "http2", "runtime", "server", "socket2", "stream", "tcp"] }
indexmap = { version = "1.9.2", default-features = false, features = ["std"] }
itertools = { version = "0.10.5", features = ["default", "use_alloc", "use_std"] }
libc = { version = "0.2.139", features = ["default", "extra_traits", "std"] }
log = { version = "0.4.17", default-features = false, features = ["serde", "std"] }
memchr = { version = "2.5.0", features = ["default", "std", "use_std"] }
num-integer = { version = "0.1.45", default-features = false, features = ["i128", "std"] }
num-traits = { version = "0.2.15", features = ["default", "i128", "libm", "std"] }
petgraph = { version = "0.5.1", features = ["default", "graphmap", "matrix_graph", "stable_graph"] }
phf_shared = { version = "0.11.1", features = ["default", "std", "uncased"] }
plotters = { version = "0.3.4", default-features = false, features = ["area_series", "evcxr", "histogram", "line_series", "plotters-svg", "svg_backend"] }
prost = { version = "0.8.0", features = ["default", "prost-derive", "std"] }
rand = { version = "0.8.4", features = ["alloc", "default", "getrandom", "libc", "rand_chacha", "rand_hc", "small_rng", "std", "std_rng"] }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc", "getrandom", "std"] }
regex = { version = "1.7.1", features = ["aho-corasick", "default", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-syntax = { version = "0.6.28", features = ["default", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
reqwest = { version = "0.11.14", features = ["__tls", "blocking", "default", "default-tls", "hyper-tls", "json", "native-tls-crate", "serde_json", "stream", "tokio-native-tls", "tokio-util", "wasm-streams"] }
rusty-fork = { version = "0.3.0", features = ["default", "timeout", "wait-timeout"] }
serde = { version = "1.0.153", features = ["alloc", "default", "derive", "rc", "serde_derive", "std"] }
serde_json = { version = "1.0.94", features = ["default", "indexmap", "preserve_order", "std"] }
standback = { version = "0.2.17", default-features = false, features = ["std"] }
subtle = { version = "2.5.0", default-features = false, features = ["std"] }
tokio = { version = "1.26.0", features = ["bytes", "default", "fs", "full", "io-std", "io-util", "libc", "macros", "memchr", "mio", "net", "num_cpus", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros", "windows-sys"] }
tokio-util = { version = "0.7.7", features = ["codec", "compat", "default", "futures-io", "io", "tracing"] }
toml = { version = "0.5.11", features = ["default"] }
tracing = { version = "0.1.34", features = ["attributes", "default", "log", "std", "tracing-attributes"] }
tracing-core = { version = "0.1.26", features = ["default", "lazy_static", "std", "valuable"] }
warp = { version = "0.3.3", features = ["default", "multipart", "tls", "tokio-rustls", "tokio-tungstenite", "websocket"] }
zeroize = { version = "1.5.7", features = ["alloc", "default", "zeroize_derive"] }

[target.x86_64-unknown-linux-gnu.build-dependencies]
Inflector = { version = "0.11.4", features = ["default", "heavyweight", "lazy_static", "regex"] }
ahash = { version = "0.7.6", features = ["default", "std"] }
anyhow = { version = "1.0.69", features = ["backtrace", "default", "std"] }
backtrace = { version = "0.3.58", features = ["addr2line", "default", "gimli-symbolize", "miniz_oxide", "object", "serde", "std"] }
block-buffer = { version = "0.9.0", default-features = false, features = ["block-padding"] }
byteorder = { version = "1.4.3", features = ["default", "i128", "std"] }
bytes = { version = "1.4.0", features = ["default", "serde", "std"] }
cc = { version = "1.0.79", default-features = false, features = ["jobserver", "parallel"] }
chrono = { version = "0.4.23", features = ["clock", "default", "iana-time-zone", "js-sys", "oldtime", "serde", "std", "time", "wasm-bindgen", "wasmbind", "winapi"] }
clap = { version = "2.34.0", features = ["ansi_term", "atty", "color", "default", "strsim", "suggestions", "vec_map"] }
codespan-reporting = { version = "0.11.1", default-features = false, features = ["serde", "serialization"] }
console = { version = "0.15.5", features = ["ansi-parsing", "default", "unicode-width"] }
crossbeam-channel = { version = "0.5.7", features = ["crossbeam-utils", "default", "std"] }
crossbeam-deque = { version = "0.8.3", features = ["crossbeam-epoch", "crossbeam-utils", "default", "std"] }
crossbeam-queue = { version = "0.3.8", features = ["alloc", "default", "std"] }
crossbeam-utils = { version = "0.8.8", features = ["default", "lazy_static", "std"] }
either = { version = "1.8.1", features = ["default", "use_std"] }
futures-channel = { version = "0.3.26", features = ["alloc", "default", "futures-sink", "sink", "std"] }
futures-core = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-io = { version = "0.3.26", features = ["default", "std"] }
futures-sink = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-util = { version = "0.3.17", features = ["alloc", "async-await", "async-await-macro", "channel", "default", "futures-channel", "futures-io", "futures-macro", "futures-sink", "io", "memchr", "proc-macro-hack", "proc-macro-nested", "sink", "slab", "std"] }
generic-array = { version = "0.14.6", default-features = false, features = ["more_lengths"] }
hashbrown = { version = "0.12.3", features = ["ahash", "default", "inline-more", "raw"] }
hyper = { version = "0.14.24", features = ["client", "default", "full", "h2", "http1", "http2", "runtime", "server", "socket2", "stream", "tcp"] }
indexmap = { version = "1.9.2", default-features = false, features = ["std"] }
itertools = { version = "0.10.5", features = ["default", "use_alloc", "use_std"] }
libc = { version = "0.2.139", features = ["default", "extra_traits", "std"] }
log = { version = "0.4.17", default-features = false, features = ["serde", "std"] }
memchr = { version = "2.5.0", features = ["default", "std", "use_std"] }
num-integer = { version = "0.1.45", default-features = false, features = ["i128", "std"] }
num-traits = { version = "0.2.15", features = ["default", "i128", "libm", "std"] }
petgraph = { version = "0.5.1", features = ["default", "graphmap", "matrix_graph", "stable_graph"] }
phf_shared = { version = "0.11.1", features = ["default", "std", "uncased"] }
plotters = { version = "0.3.4", default-features = false, features = ["area_series", "evcxr", "histogram", "line_series", "plotters-svg", "svg_backend"] }
proc-macro2 = { version = "0.4.30", features = ["default", "proc-macro"] }
prost = { version = "0.8.0", features = ["default", "prost-derive", "std"] }
quote = { version = "0.6.13", features = ["default", "proc-macro"] }
rand = { version = "0.8.4", features = ["alloc", "default", "getrandom", "libc", "rand_chacha", "rand_hc", "small_rng", "std", "std_rng"] }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc", "getrandom", "std"] }
regex = { version = "1.7.1", features = ["aho-corasick", "default", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-syntax = { version = "0.6.28", features = ["default", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
reqwest = { version = "0.11.14", features = ["__tls", "blocking", "default", "default-tls", "hyper-tls", "json", "native-tls-crate", "serde_json", "stream", "tokio-native-tls", "tokio-util", "wasm-streams"] }
rusty-fork = { version = "0.3.0", features = ["default", "timeout", "wait-timeout"] }
serde = { version = "1.0.153", features = ["alloc", "default", "derive", "rc", "serde_derive", "std"] }
serde_json = { version = "1.0.94", features = ["default", "indexmap", "preserve_order", "std"] }
standback = { version = "0.2.17", default-features = false, features = ["std"] }
subtle = { version = "2.5.0", default-features = false, features = ["std"] }
syn-3575ec1268b04181 = { package = "syn", version = "0.15.44", features = ["clone-impls", "default", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit"] }
syn-dff4ba8e3ae991db = { package = "syn", version = "1.0.109", features = ["clone-impls", "default", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit", "visit-mut"] }
tokio = { version = "1.26.0", features = ["bytes", "default", "fs", "full", "io-std", "io-util", "libc", "macros", "memchr", "mio", "net", "num_cpus", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros", "windows-sys"] }
tokio-util = { version = "0.7.7", features = ["codec", "compat", "default", "futures-io", "io", "tracing"] }
toml = { version = "0.5.11", features = ["default"] }
tracing = { version = "0.1.34", features = ["attributes", "default", "log", "std", "tracing-attributes"] }
tracing-core = { version = "0.1.26", features = ["default", "lazy_static", "std", "valuable"] }
warp = { version = "0.3.3", features = ["default", "multipart", "tls", "tokio-rustls", "tokio-tungstenite", "websocket"] }
zeroize = { version = "1.5.7", features = ["alloc", "default", "zeroize_derive"] }

[target.x86_64-apple-darwin.dependencies]
Inflector = { version = "0.11.4", features = ["default", "heavyweight", "lazy_static", "regex"] }
ahash = { version = "0.7.6", features = ["default", "std"] }
anyhow = { version = "1.0.69", features = ["backtrace", "default", "std"] }
backtrace = { version = "0.3.58", features = ["addr2line", "default", "gimli-symbolize", "miniz_oxide", "object", "serde", "std"] }
block-buffer = { version = "0.9.0", default-features = false, features = ["block-padding"] }
byteorder = { version = "1.4.3", features = ["default", "i128", "std"] }
bytes = { version = "1.4.0", features = ["default", "serde", "std"] }
chrono = { version = "0.4.23", features = ["clock", "default", "iana-time-zone", "js-sys", "oldtime", "serde", "std", "time", "wasm-bindgen", "wasmbind", "winapi"] }
clap = { version = "2.34.0", features = ["ansi_term", "atty", "color", "default", "strsim", "suggestions", "vec_map"] }
codespan-reporting = { version = "0.11.1", default-features = false, features = ["serde", "serialization"] }
console = { version = "0.15.5", features = ["ansi-parsing", "default", "unicode-width"] }
crossbeam-channel = { version = "0.5.7", features = ["crossbeam-utils", "default", "std"] }
crossbeam-deque = { version = "0.8.3", features = ["crossbeam-epoch", "crossbeam-utils", "default", "std"] }
crossbeam-queue = { version = "0.3.8", features = ["alloc", "default", "std"] }
crossbeam-utils = { version = "0.8.8", features = ["default", "lazy_static", "std"] }
either = { version = "1.8.1", features = ["default", "use_std"] }
futures-channel = { version = "0.3.26", features = ["alloc", "default", "futures-sink", "sink", "std"] }
futures-core = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-io = { version = "0.3.26", features = ["default", "std"] }
futures-sink = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-util = { version = "0.3.17", features = ["alloc", "async-await", "async-await-macro", "channel", "default", "futures-channel", "futures-io", "futures-macro", "futures-sink", "io", "memchr", "proc-macro-hack", "proc-macro-nested", "sink", "slab", "std"] }
generic-array = { version = "0.14.6", default-features = false, features = ["more_lengths"] }
hashbrown = { version = "0.12.3", features = ["ahash", "default", "inline-more", "raw"] }
hyper = { version = "0.14.24", features = ["client", "default", "full", "h2", "http1", "http2", "runtime", "server", "socket2", "stream", "tcp"] }
indexmap = { version = "1.9.2", default-features = false, features = ["std"] }
itertools = { version = "0.10.5", features = ["default", "use_alloc", "use_std"] }
libc = { version = "0.2.139", features = ["default", "extra_traits", "std"] }
log = { version = "0.4.17", default-features = false, features = ["serde", "std"] }
memchr = { version = "2.5.0", features = ["default", "std", "use_std"] }
num-integer = { version = "0.1.45", default-features = false, features = ["i128", "std"] }
num-traits = { version = "0.2.15", features = ["default", "i128", "libm", "std"] }
petgraph = { version = "0.5.1", features = ["default", "graphmap", "matrix_graph", "stable_graph"] }
phf_shared = { version = "0.11.1", features = ["default", "std", "uncased"] }
plotters = { version = "0.3.4", default-features = false, features = ["area_series", "evcxr", "histogram", "line_series", "plotters-svg", "svg_backend"] }
prost = { version = "0.8.0", features = ["default", "prost-derive", "std"] }
rand = { version = "0.8.4", features = ["alloc", "default", "getrandom", "libc", "rand_chacha", "rand_hc", "small_rng", "std", "std_rng"] }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc", "getrandom", "std"] }
regex = { version = "1.7.1", features = ["aho-corasick", "default", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-syntax = { version = "0.6.28", features = ["default", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
reqwest = { version = "0.11.14", features = ["__tls", "blocking", "default", "default-tls", "hyper-tls", "json", "native-tls-crate", "serde_json", "stream", "tokio-native-tls", "tokio-util", "wasm-streams"] }
rusty-fork = { version = "0.3.0", features = ["default", "timeout", "wait-timeout"] }
serde = { version = "1.0.153", features = ["alloc", "default", "derive", "rc", "serde_derive", "std"] }
serde_json = { version = "1.0.94", features = ["default", "indexmap", "preserve_order", "std"] }
standback = { version = "0.2.17", default-features = false, features = ["std"] }
subtle = { version = "2.5.0", default-features = false, features = ["std"] }
tokio = { version = "1.26.0", features = ["bytes", "default", "fs", "full", "io-std", "io-util", "libc", "macros", "memchr", "mio", "net", "num_cpus", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros", "windows-sys"] }
tokio-util = { version = "0.7.7", features = ["codec", "compat", "default", "futures-io", "io", "tracing"] }
toml = { version = "0.5.11", features = ["default"] }
tracing = { version = "0.1.34", features = ["attributes", "default", "log", "std", "tracing-attributes"] }
tracing-core = { version = "0.1.26", features = ["default", "lazy_static", "std", "valuable"] }
warp = { version = "0.3.3", features = ["default", "multipart", "tls", "tokio-rustls", "tokio-tungstenite", "websocket"] }
zeroize = { version = "1.5.7", features = ["alloc", "default", "zeroize_derive"] }

[target.x86_64-apple-darwin.build-dependencies]
Inflector = { version = "0.11.4", features = ["default", "heavyweight", "lazy_static", "regex"] }
ahash = { version = "0.7.6", features = ["default", "std"] }
anyhow = { version = "1.0.69", features = ["backtrace", "default", "std"] }
backtrace = { version = "0.3.58", features = ["addr2line", "default", "gimli-symbolize", "miniz_oxide", "object", "serde", "std"] }
block-buffer = { version = "0.9.0", default-features = false, features = ["block-padding"] }
byteorder = { version = "1.4.3", features = ["default", "i128", "std"] }
bytes = { version = "1.4.0", features = ["default", "serde", "std"] }
cc = { version = "1.0.79", default-features = false, features = ["jobserver", "parallel"] }
chrono = { version = "0.4.23", features = ["clock", "default", "iana-time-zone", "js-sys", "oldtime", "serde", "std", "time", "wasm-bindgen", "wasmbind", "winapi"] }
clap = { version = "2.34.0", features = ["ansi_term", "atty", "color", "default", "strsim", "suggestions", "vec_map"] }
codespan-reporting = { version = "0.11.1", default-features = false, features = ["serde", "serialization"] }
console = { version = "0.15.5", features = ["ansi-parsing", "default", "unicode-width"] }
crossbeam-channel = { version = "0.5.7", features = ["crossbeam-utils", "default", "std"] }
crossbeam-deque = { version = "0.8.3", features = ["crossbeam-epoch", "crossbeam-utils", "default", "std"] }
crossbeam-queue = { version = "0.3.8", features = ["alloc", "default", "std"] }
crossbeam-utils = { version = "0.8.8", features = ["default", "lazy_static", "std"] }
either = { version = "1.8.1", features = ["default", "use_std"] }
futures-channel = { version = "0.3.26", features = ["alloc", "default", "futures-sink", "sink", "std"] }
futures-core = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-io = { version = "0.3.26", features = ["default", "std"] }
futures-sink = { version = "0.3.26", features = ["alloc", "default", "std"] }
futures-util = { version = "0.3.17", features = ["alloc", "async-await", "async-await-macro", "channel", "default", "futures-channel", "futures-io", "futures-macro", "futures-sink", "io", "memchr", "proc-macro-hack", "proc-macro-nested", "sink", "slab", "std"] }
generic-array = { version = "0.14.6", default-features = false, features = ["more_lengths"] }
hashbrown = { version = "0.12.3", features = ["ahash", "default", "inline-more", "raw"] }
hyper = { version = "0.14.24", features = ["client", "default", "full", "h2", "http1", "http2", "runtime", "server", "socket2", "stream", "tcp"] }
indexmap = { version = "1.9.2", default-features = false, features = ["std"] }
itertools = { version = "0.10.5", features = ["default", "use_alloc", "use_std"] }
libc = { version = "0.2.139", features = ["default", "extra_traits", "std"] }
log = { version = "0.4.17", default-features = false, features = ["serde", "std"] }
memchr = { version = "2.5.0", features = ["default", "std", "use_std"] }
num-integer = { version = "0.1.45", default-features = false, features = ["i128", "std"] }
num-traits = { version = "0.2.15", features = ["default", "i128", "libm", "std"] }
petgraph = { version = "0.5.1", features = ["default", "graphmap", "matrix_graph", "stable_graph"] }
phf_shared = { version = "0.11.1", features = ["default", "std", "uncased"] }
plotters = { version = "0.3.4", default-features = false, features = ["area_series", "evcxr", "histogram", "line_series", "plotters-svg", "svg_backend"] }
proc-macro2 = { version = "0.4.30", features = ["default", "proc-macro"] }
prost = { version = "0.8.0", features = ["default", "prost-derive", "std"] }
quote = { version = "0.6.13", features = ["default", "proc-macro"] }
rand = { version = "0.8.4", features = ["alloc", "default", "getrandom", "libc", "rand_chacha", "rand_hc", "small_rng", "std", "std_rng"] }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc", "getrandom", "std"] }
regex = { version = "1.7.1", features = ["aho-corasick", "default", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-syntax = { version = "0.6.28", features = ["default", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
reqwest = { version = "0.11.14", features = ["__tls", "blocking", "default", "default-tls", "hyper-tls", "json", "native-tls-crate", "serde_json", "stream", "tokio-native-tls", "tokio-util", "wasm-streams"] }
rusty-fork = { version = "0.3.0", features = ["default", "timeout", "wait-timeout"] }
serde = { version = "1.0.153", features = ["alloc", "default", "derive", "rc", "serde_derive", "std"] }
serde_json = { version = "1.0.94", features = ["default", "indexmap", "preserve_order", "std"] }
standback = { version = "0.2.17", default-features = false, features = ["std"] }
subtle = { version = "2.5.0", default-features = false, features = ["std"] }
syn-3575ec1268b04181 = { package = "syn", version = "0.15.44", features = ["clone-impls", "default", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit"] }
syn-dff4ba8e3ae991db = { package = "syn", version = "1.0.109", features = ["clone-impls", "default", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit", "visit-mut"] }
tokio = { version = "1.26.0", features = ["bytes", "default", "fs", "full", "io-std", "io-util", "libc", "macros", "memchr", "mio", "net", "num_cpus", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros", "windows-sys"] }
tokio-util = { version = "0.7.7", features = ["codec", "compat", "default", "futures-io", "io", "tracing"] }
toml = { version = "0.5.11", features = ["default"] }
tracing = { version = "0.1.34", features = ["attributes", "default", "log", "std", "tracing-attributes"] }
tracing-core = { version = "0.1.26", features = ["default", "lazy_static", "std", "valuable"] }
warp = { version = "0.3.3", features = ["default", "multipart", "tls", "tokio-rustls", "tokio-tungstenite", "websocket"] }
zeroize = { version = "1.5.7", features = ["alloc", "default", "zeroize_derive"] }

### END HAKARI SECTION
