[package]
name = "swiss-knife"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Tool for generating, serializing (LCS), hashing and signing Diem transactions. Additionally, contains tools for testing"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.21"
rand = "0.8.3"
hex = "0.4.3"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }

bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-types = { path = "../../types" }
diem-crypto = { path = "../diem-crypto" }
diem-workspace-hack = { path = "../diem-workspace-hack" }
move-core-types = { path = "../../language/move-core/types" }
diem-transaction-builder = { path = "../../sdk/transaction-builder" }
