[package]
name = "db-bootstrapper"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem DB-Bootstrapper."
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
structopt = "0.3.21"

executor = { path = "../executor" }
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diemdb = { path = "../../storage/diemdb" }
diem-config = { path = "../../config" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-temppath = { path = "../../crates/diem-temppath" }
diem-types = { path = "../../types" }
diem-vm = { path = "../../language/diem-vm" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
storage-interface = { path = "../../storage/storage-interface" }
