[package]
name = "executor-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem executor interface types"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.124", default-features = false }
thiserror = "1.0.37"

bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-secure-net = { path = "../../secure/net" }
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
diem-scratchpad = { path = "../../storage/diem-scratchpad" }
storage-interface = { path = "../../storage/storage-interface" }

[features]
default = []
fuzzing = ["diem-crypto/fuzzing", "diem-types/fuzzing"]
