[package]
name = "jsonrpc-integration-tests"
version = "0.0.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
hex = "0.4.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false }
serde_json = "1.0.64"

diem-json-rpc-types = { path = "../types" }
diem-sdk = { path = "../../sdk" }
forge = { path = "../../testsuite/forge" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }

[[test]]
name = "jsonrpc-forge"
harness = false
