[package]
name = "diem-vm"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem VM runtime"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
once_cell = "1.7.2"
rayon = "1.5.0"
mirai-annotations = "1.10.1"
tracing = "0.1.16"

bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-logger = { path = "../../crates/diem-logger" }
diem-metrics = { path = "../../crates/diem-metrics" }
diem-state-view = { path = "../../storage/state-view" }
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-core-types = { path = "../move-core/types" }
move-vm-runtime = { path = "../move-vm/runtime" }
move-vm-types = { path = "../move-vm/types" }
move-binary-format = { path = "../move-binary-format" }
move-stdlib = { path = "../move-stdlib" }
diem-framework = { path = "../diem-framework" }
serde_json = "1.0.64"
serde = { version = "1.0.124", default-features = false }


[dev-dependencies]
proptest = "1.0.0"

diem-types = { path = "../../types", features = ["fuzzing"] }
diem-framework-releases = { path = "../diem-framework/releases" }

[features]
default = []
mirai-contracts = []
fuzzing = ["move-binary-format/fuzzing","move-vm-types/fuzzing"]
failpoints = ["fail/failpoints", "move-vm-runtime/failpoints"]
